preview card final

--- a/index.html
+++ b/index.html
@@ -11,12 +11,35 @@
       sizes="32x32"
       href="./images/favicon-32x32.png"
     />
+    <link rel="stylesheet" href="index.css" />
 
     <title>NFT preview card component</title>
   </head>
   <body>
+    <section>
+      <div></div>
+    </section>
     <main>
-      <section></section>
+      <img src="assets/images/image-equilibrium.jpg" alt="equilibrium image" />
+      <div class="desc">
+        <p class="header">Equilibrium #3429</p>
+        <p>Our Equilibrium collection promotes balance and calm.</p>
+        <div class="detail">
+          <small
+            ><img src="assets/images/icon-ethereum.svg" alt="ethereum icon" />
+            0.041 ETH</small
+          >
+          <small
+            ><img src="assets/images/icon-clock.svg" alt="clock icon" /> 3 days
+            left</small
+          >
+        </div>
+      </div>
+      <hr />
+      <footer>
+        <img src="assets/images/image-avatar.png" alt="avatar image" />
+        <small>Creation of<span class="name"> Jules Wyvern</span></small>
+      </footer>
     </main>
   </body>
 </html>
