active state added

--- a/index.html
+++ b/index.html
@@ -16,11 +16,16 @@
     <title>NFT preview card component</title>
   </head>
   <body>
-    <section>
-      <div></div>
-    </section>
     <main>
-      <img src="assets/images/image-equilibrium.jpg" alt="equilibrium image" />
+      <div class="head-img">
+        <div class="voir">
+          <img src="assets/images/icon-view.svg" alt="view icon" />
+        </div>
+        <img
+          src="assets/images/image-equilibrium.jpg"
+          alt="equilibrium image"
+        />
+      </div>
       <div class="desc">
         <p class="header">Equilibrium #3429</p>
         <p>Our Equilibrium collection promotes balance and calm.</p>
